// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`XID Rotate Inception Key 1. Inception should match the inception document snapshot 1`] = `
"XID(0af037df) [
    'provenance': Bytes(115) [
        'provenanceGenerator': Bytes(190)
        'salt': Bytes(32)
    ]
    'key': Bytes(78) [
        'allow': 'All'
        'salt': Bytes(32)
        'privateKey': Bytes(78)
    ]
]"
`;

exports[`XID Rotate Inception Key 2. Add Bob key should match the two-key document snapshot 1`] = `
"XID(0af037df) [
    'key': Bytes(78) [
        'allow': 'All'
        'salt': Bytes(32)
        'privateKey': Bytes(78)
    ]
    'key': Bytes(80) [
        'allow': 'All'
    ]
    'provenance': Bytes(115) [
        'provenanceGenerator': Bytes(190)
        'salt': Bytes(32)
    ]
]"
`;

exports[`XID Rotate Inception Key 3. Remove inception key should match the post-rotation document snapshot 1`] = `
"XID(0af037df) [
    'provenance': Bytes(115) [
        'salt': Bytes(32)
        'provenanceGenerator': Bytes(190)
    ]
    'key': Bytes(80) [
        'allow': 'All'
    ]
]"
`;

exports[`XID Rotate Inception Key 4. Ledger verification should match the ledger summary snapshot 1`] = `
"XID Ledger (3 revisions)
XID: XID(0af037df)

  #0 [5361a340] 2025-01-01T00:00:00Z "genesis"
  #1 [5390d204] 2025-01-02T00:00:00Z "add-bob-key"
  #2 [8d37902e] 2025-01-03T00:00:00Z "remove-inception-key""
`;
